fix recipe comment and swagger
